--- a/public/css/components/1-main/mixin.scss
+++ b/public/css/components/1-main/mixin.scss
@@ -80,38 +80,23 @@
   -ms-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
 }
-@mixin xxxsm-xxsm {
-  @media (max-width: 390px) {
-    @content;
-  }
-}
-@mixin xxsm-xsm {
-  @media (max-width: 440px) {
-    @content;
-  }
-}
 @mixin xsm-sm {
   @media (max-width: 540px) {
     @content;
   }
 }
-@mixin sm-md-extra {
-  @media (max-width: 650px) {
-    @content;
-  }
-}
 @mixin sm-md {
-  @media (max-width: 750px) {
-    @content;
-  }
-}
-@mixin md-lg-extra {
-  @media (max-width: 840px) {
+  @media (max-width: 700px) {
     @content;
   }
 }
 @mixin md-lg {
-  @media (max-width: 930px) {
+  @media (max-width: 840px) {
+    @content;
+  }
+}
+@mixin extra {
+  @media (max-width: 900px) {
     @content;
   }
 }
@@ -120,33 +105,13 @@
     @content;
   }
 }
-@mixin lg-xlg-extra {
-  @media (max-width: 1080px) {
-    @content;
-  }
-}
 @mixin xlg-xxlg {
-  @media (max-width: 1180px) {
-    @content;
-  }
-}
-@mixin xlg-xxlg-extra {
-  @media (max-width: 1250px) {
+  @media (max-width: 1240px) {
     @content;
   }
 }
 @mixin xxlg-xxxlg {
   @media (max-width: 1340px) {
-    @content;
-  }
-}
-@mixin xxxlg-xxxxlg {
-  @media (max-width: 1380px) {
-    @content;
-  }
-}
-@mixin xxxxlg-xxxxxlg {
-  @media (max-width: 1450px) {
     @content;
   }
 }
