--- a/public/css/main.css
+++ b/public/css/main.css
@@ -318,6 +318,135 @@ p.sm {
           transform: translateY(-50%) rotate(45deg);
 }
 
+.share {
+  position: relative;
+}
+.share__btn {
+  width: 56px;
+  height: 56px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  border: 1px solid #bd93f1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.share__btn.active {
+  background-color: #7d1ec0;
+  opacity: 1;
+}
+.share__btn.active svg {
+  color: #fff;
+}
+.share__btn:hover {
+  background-color: #7d1ec0;
+  opacity: 1;
+}
+.share__btn:hover svg {
+  color: #fff;
+}
+.share__btn svg {
+  width: 40%;
+  height: 42%;
+  color: #292d32;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  margin-right: 5px;
+}
+.share__menu {
+  position: absolute;
+  top: 100%;
+  right: -24px;
+  min-width: 210px;
+  padding: 18px 20px;
+  border-radius: 20px;
+  border: 1px solid #e7e7e7;
+  -webkit-box-shadow: 50px 95px 135px rgba(122, 119, 137, 0.44);
+          box-shadow: 50px 95px 135px rgba(122, 119, 137, 0.44);
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.share__menu::before {
+  position: absolute;
+  bottom: 100%;
+  right: 42px;
+  width: 16px;
+  height: 16px;
+  border-top: 1px solid #d9d9d9;
+  border-right: 1px solid #d9d9d9;
+  border-top-right-radius: 4px;
+  content: "";
+  -webkit-transform: translateY(7px) rotate(-45deg);
+          transform: translateY(7px) rotate(-45deg);
+  background-color: #fff;
+}
+.share__menu a,
+.share__menu button {
+  font-size: 16px !important;
+  line-height: 120% !important;
+  color: #212529 !important;
+  font-weight: 500 !important;
+  margin-bottom: 15px !important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: capitalize;
+}
+.share__menu a:hover,
+.share__menu button:hover {
+  opacity: 0.8;
+}
+.share__menu a:last-child,
+.share__menu button:last-child {
+  margin: 0;
+}
+.share__menu a span,
+.share__menu button span {
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 8px;
+}
+.share__menu a span svg,
+.share__menu button span svg {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+}
+
 .header {
   position: absolute;
   top: 0;
