--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -40,7 +40,7 @@
       position: relative;
       z-index: 2;
       padding-top: 120px;
-      //   opacity: 0;
+      opacity: 0;
       @include transition;
       &::before {
         position: absolute;
@@ -61,6 +61,7 @@
       );
       padding: 12px 12px 20px 12px;
       color: $white;
+      @include transition;
       &-head {
         display: flex;
         align-items: center;
@@ -193,6 +194,45 @@
           width: 20px;
           height: 20px;
         }
+      }
+    }
+  }
+}
+@mixin post-xlg-xxlg {
+  .post {
+    &__inner {
+      max-width: 940px;
+    }
+    &Item {
+      width: calc(50% - 24px);
+    }
+  }
+}
+@mixin post-sm-md {
+  .post {
+    padding: 0;
+    .auto__container {
+      padding: 0;
+    }
+    &__row {
+      margin: 0;
+    }
+    &Item {
+      width: 100%;
+      height: 100dvh;
+      margin: 0;
+      border-radius: 0;
+      &:hover {
+        .postItem__info {
+          padding-bottom: 130px;
+        }
+      }
+      &__inner {
+        padding-top: 16px;
+        height: 100%;
+        justify-content: flex-end;
+      }
+      &__info {
       }
     }
   }
