--- a/public/css/main.css
+++ b/public/css/main.css
@@ -630,7 +630,7 @@ p.sm {
   text-align: center;
 }
 .footer__inner p {
-  color: #665F5F;
+  color: #665f5f;
 }
 
 .modal {
@@ -801,6 +801,7 @@ p.sm {
   position: relative;
   z-index: 2;
   padding-top: 120px;
+  opacity: 0;
   -webkit-transition: all 0.2s ease-in-out 0s;
   transition: all 0.2s ease-in-out 0s;
   -moz-transition: all 0.2s ease-in-out 0s;
@@ -820,6 +821,9 @@ p.sm {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
   padding: 12px 12px 20px 12px;
   color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
 }
 .postItem__info-head {
   display: -webkit-box;
@@ -1617,10 +1621,17 @@ p.sm {
     line-height: 18px;
     padding: 10px 16px;
   }
+  .post__inner {
+    max-width: 940px;
+  }
+  .postItem {
+    width: calc(50% - 24px);
+  }
 }
 @media (max-width: 700px) {
   .main {
     padding-top: 0;
+    min-height: unset;
   }
   .header {
     position: fixed;
@@ -1696,7 +1707,7 @@ p.sm {
     position: relative;
     z-index: 3;
     padding: 0;
-    height: 75px;
+    height: 60px;
     border-top: 2px solid transparent;
     border-radius: 0;
     color: #696e81;
@@ -1764,5 +1775,33 @@ p.sm {
     height: 24px;
     display: block;
     color: #fff;
+  }
+  .footer {
+    display: none;
+  }
+  .post {
+    padding: 0;
+  }
+  .post .auto__container {
+    padding: 0;
+  }
+  .post__row {
+    margin: 0;
+  }
+  .postItem {
+    width: 100%;
+    height: 100dvh;
+    margin: 0;
+    border-radius: 0;
+  }
+  .postItem:hover .postItem__info {
+    padding-bottom: 130px;
+  }
+  .postItem__inner {
+    padding-top: 16px;
+    height: 100%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
 }
