--- a/public/css/components/3-pages/addProduct.scss
+++ b/public/css/components/3-pages/addProduct.scss
@@ -21,6 +21,46 @@
     }
   }
 }
+@mixin addProduct-xlg-xxlg {
+  .addProduct {
+    &__inner {
+      margin: 0;
+      padding: 32px 20px;
+    }
+  }
+}
+@mixin addProduct-sm-md {
+  .addProduct {
+    border-radius: 35px 35px 0px 0px;
+    background: #fff;
+    padding: 32px 0 130px 0;
+    &__inner {
+      box-shadow: unset;
+      border: unset;
+      border-radius: unset;
+      padding: 0;
+    }
+  }
+}
+@mixin addProduct-xsm-sm {
+  .addProduct {
+    &__form {
+      &-footer {
+        flex-direction: column;
+        max-width: 300px;
+        margin: 0 auto;
+        .button {
+          width: 100%;
+          margin: 0 0 12px 0;
+          max-width: unset;
+          &:last-child {
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
+}
 .upload {
   width: calc(50% - 15px);
   padding: 30px;
@@ -89,6 +129,7 @@
       svg {
         color: $primary;
         width: 20px;
+        min-width: 20px;
         height: 20px;
         margin-right: 10px;
       }
@@ -100,6 +141,56 @@
 
     align-items: center;
     margin-bottom: 50px;
+  }
+}
+@mixin upload-xlg-xxlg {
+  .upload {
+    &__list {
+      &-item {
+        font-size: 14px;
+        line-height: 20px;
+        padding: 12px;
+        margin-bottom: 8px;
+      }
+    }
+  }
+}
+@mixin upload-lg-xlg {
+  .upload {
+    padding: 15px;
+  }
+}
+@mixin upload-sm-md {
+  .upload {
+    width: 100%;
+    max-width: unset;
+    margin-bottom: 24px;
+    &__inner {
+      padding-bottom: 63%;
+    }
+    &__row {
+      flex-direction: column;
+      margin-bottom: 30px;
+    }
+    &__list {
+      width: 100%;
+    }
+  }
+}
+@mixin upload-xsm-sm {
+  .upload {
+    &__icon {
+      width: 70px;
+      height: 70px;
+      margin-bottom: 4px;
+    }
+    &__content {
+      h2.sm {
+        margin-bottom: 4px;
+      }
+    }
+    &__list {
+    }
   }
 }
 .more {
@@ -119,6 +210,8 @@
     &__image {
       padding-bottom: 110%;
       position: relative;
+      border-radius: 14px;
+      overflow: hidden;
       img {
         position: absolute;
         top: 0;
@@ -155,5 +248,77 @@
   &__inner {
     display: flex;
     margin: 0 -12px;
+  }
+}
+@mixin more-xlg-xxlg {
+  .more {
+    padding: 16px;
+    &__inner {
+      margin: 0 -6px;
+    }
+    &Item {
+      margin: 0 6px;
+      width: calc(25% - 12px);
+      &__status {
+        font-size: 14px;
+        line-height: 22px;
+        svg {
+          width: 20px;
+          height: 20px;
+          margin-right: 6px;
+        }
+      }
+      &__content {
+        p {
+          font-size: 14px;
+          line-height: 22px;
+        }
+      }
+    }
+  }
+}
+@mixin more-lg-xlg {
+  .more {
+    &__inner {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &Item {
+      width: calc(33.3% - 12px);
+      margin: 6px;
+    }
+  }
+}
+@mixin more-sm-md {
+  .more {
+    &Item {
+      width: calc(50% - 12px);
+    }
+  }
+}
+@mixin more-xsm-sm {
+  .more {
+    &__inner {
+      margin: 0;
+    }
+    &Item {
+      margin: 0 0 20px 0;
+      width: 100%;
+      &__status {
+        font-size: 20px;
+        line-height: 26px;
+        svg {
+          width: 32px;
+          height: 32px;
+          margin-right: 15px;
+        }
+      }
+      &__content {
+        p {
+          font-size: 18px;
+          line-height: 35px;
+        }
+      }
+    }
   }
 }
