--- a/public/css/main.css
+++ b/public/css/main.css
@@ -741,6 +741,10 @@ p.sm {
   color: #ffbaae;
 }
 
+.upHeader {
+  display: none;
+}
+
 .post {
   padding: 40px 0;
 }
@@ -1306,6 +1310,7 @@ p.sm {
 .upload__list-item svg {
   color: #ffbaae;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   margin-right: 10px;
 }
@@ -1341,6 +1346,8 @@ p.sm {
 .moreItem__image {
   padding-bottom: 110%;
   position: relative;
+  border-radius: 14px;
+  overflow: hidden;
 }
 .moreItem__image img {
   position: absolute;
@@ -1621,14 +1628,262 @@ p.sm {
     line-height: 18px;
     padding: 10px 16px;
   }
+  .profileSide {
+    width: 360px;
+    margin-right: 20px;
+  }
+  .profileSide__link {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .profileMain {
+    width: calc(100% - 380px);
+  }
   .post__inner {
     max-width: 940px;
   }
   .postItem {
     width: calc(50% - 24px);
   }
+  .post__inner {
+    max-width: 940px;
+  }
+  .postItem {
+    width: calc(50% - 24px);
+  }
+  .post__inner {
+    max-width: 940px;
+  }
+  .postItem {
+    width: calc(50% - 24px);
+  }
+  .addProduct__inner {
+    margin: 0;
+    padding: 32px 20px;
+  }
+  .more {
+    padding: 16px;
+  }
+  .more__inner {
+    margin: 0 -6px;
+  }
+  .moreItem {
+    margin: 0 6px;
+    width: calc(25% - 12px);
+  }
+  .moreItem__status {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .moreItem__status svg {
+    width: 20px;
+    height: 20px;
+    margin-right: 6px;
+  }
+  .moreItem__content p {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .upload__list-item {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 12px;
+    margin-bottom: 8px;
+  }
+}
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+  h2.sm {
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .more__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .moreItem {
+    width: calc(33.3% - 12px);
+    margin: 6px;
+  }
+  .upload {
+    padding: 15px;
+  }
+  .profileSide {
+    width: 240px;
+  }
+  .profileSide__avatar-edit {
+    width: 40px;
+    height: 40px;
+  }
+  .profileSide__avatar-edit svg {
+    width: 18px;
+    height: 18px;
+  }
+  .profileMain {
+    width: calc(100% - 260px);
+  }
+}
+@media (max-width: 840px) {
+  .profile__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .profileSide {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto 38px auto;
+  }
+  .profileSide__avatar {
+    width: 240px;
+    height: 300px;
+    padding: 0;
+    margin: 0 auto 25px auto;
+  }
+  .profileMain {
+    width: 100%;
+  }
 }
 @media (max-width: 700px) {
+  h2 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  h2.sm {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  h4 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .upHeader {
+    display: block;
+    padding: 23px 0 53px 0;
+    background: #ffbaae;
+    margin-bottom: -30px;
+  }
+  .upHeader__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+  }
+  .upHeader__inner-logo {
+    width: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .upHeader__inner-logo img {
+    width: 100%;
+  }
+  .upHeader .back {
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    background: #fff;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #000;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -moz-ransform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    left: 0;
+  }
+  .upHeader .back svg {
+    width: 19px;
+    height: 19px;
+  }
+  .addProduct {
+    border-radius: 35px 35px 0px 0px;
+    background: #fff;
+    padding: 32px 0 130px 0;
+  }
+  .addProduct__inner {
+    -webkit-box-shadow: unset;
+            box-shadow: unset;
+    border: unset;
+    border-radius: unset;
+    padding: 0;
+  }
+  .upload {
+    width: 100%;
+    max-width: unset;
+    margin-bottom: 24px;
+  }
+  .upload__inner {
+    padding-bottom: 63%;
+  }
+  .upload__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 30px;
+  }
+  .upload__list {
+    width: 100%;
+  }
+  .moreItem {
+    width: calc(50% - 12px);
+  }
+  .profile {
+    border-radius: 35px 35px 0px 0px;
+    background: #fff;
+    padding: 40px 0 120px 0;
+  }
+  .profileMain__inner {
+    border-radius: 0;
+    border: 0;
+    border-bottom: 1px solid #f4f3f3;
+    padding: 0 0 30px 0;
+    margin: 0 0 30px 0;
+  }
+  .profileMain__inner:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: 0 !important;
+  }
+  .profileMain__inner .button {
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+    max-width: 200px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
   .main {
     padding-top: 0;
     min-height: unset;
@@ -1803,5 +2058,58 @@ p.sm {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+  }
+}
+@media (max-width: 540px) {
+  .addProduct__form-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  .addProduct__form-footer .button {
+    width: 100%;
+    margin: 0 0 12px 0;
+    max-width: unset;
+  }
+  .addProduct__form-footer .button:last-child {
+    margin: 0;
+  }
+  .more__inner {
+    margin: 0;
+  }
+  .moreItem {
+    margin: 0 0 20px 0;
+    width: 100%;
+  }
+  .moreItem__status {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .moreItem__status svg {
+    width: 32px;
+    height: 32px;
+    margin-right: 15px;
+  }
+  .moreItem__content p {
+    font-size: 18px;
+    line-height: 35px;
+  }
+  .upload__icon {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 4px;
+  }
+  .upload__content h2.sm {
+    margin-bottom: 4px;
+  }
+  .profileSide {
+    max-width: 313px;
+  }
+  .profileSide__avatar {
+    width: 160px;
+    height: 195px;
   }
 }
