--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9,6 +9,7 @@
 @import "./components/2-layout/nav.scss";
 @import "./components/2-layout/footer.scss";
 @import "./components/2-layout/modal.scss";
+@import "./components/2-layout/upHeader.scss";
 // 3-pages components
 @import "./components/3-pages/index.scss";
 @import "./components/3-pages/profile.scss";
