--- a/public/css/components/3-pages/user.scss
+++ b/public/css/components/3-pages/user.scss
@@ -5,6 +5,8 @@
   padding-bottom: 40px;
   &__inner {
     display: flex;
+    position: relative;
+    min-height: 480px;
     &-image {
       width: 435px;
       height: 100%;
@@ -12,6 +14,9 @@
       align-items: center;
       justify-content: center;
       margin-right: 15px;
+      position: absolute;
+      top: 0;
+      left: 0;
       img {
         @include fullImage;
       }
@@ -23,6 +28,7 @@
       width: calc(100% - 450px);
       padding: 100px 80px;
       box-sizing: border-box;
+      margin-left: auto;
       background: linear-gradient(
         90deg,
         rgba(255, 186, 174, 0.19) 0.92%,
@@ -125,6 +131,161 @@
         position: absolute;
         top: 0;
         left: 0;
+      }
+    }
+  }
+}
+@mixin user-xlg-xxlg {
+  .general {
+    &__inner {
+      min-height: 340px;
+      &-text {
+        margin-bottom: 32px;
+      }
+      &-content {
+        padding: 30px;
+        width: calc(100% - 335px);
+      }
+      &-image {
+        width: 320px;
+      }
+    }
+  }
+  .info {
+    padding: 30px 0;
+    &Item {
+      padding: 20px 10px;
+      h2.sm {
+        font-size: 16px;
+        line-height: 24px;
+      }
+      h3 {
+        font-size: 14px;
+        line-height: 20px;
+      }
+    }
+  }
+  .product {
+    &Item {
+      width: calc(33.3% - 24px);
+      margin: 12px;
+    }
+  }
+}
+@mixin user-lg-xlg {
+  .general {
+    &__inner {
+      &-image {
+        width: 240px;
+      }
+      &-content {
+        width: calc(100% - 255px);
+      }
+    }
+  }
+}
+@mixin user-sm-md {
+  .user {
+    border-radius: 42px 42px 0px 0px;
+    background: #fff;
+    padding: 60px 0 110px 0;
+  }
+  .general {
+    padding: 0;
+    &__inner {
+      flex-direction: column;
+      &-image {
+        position: static;
+        width: 240px;
+        height: 300px;
+        border: 5px solid $white;
+        margin: 0 auto;
+        overflow: hidden;
+        border-radius: 8px;
+        position: relative;
+        z-index: 1;
+      }
+      &-content {
+        width: 100%;
+        background: unset;
+        text-align: center;
+        padding: 20px;
+        position: relative;
+        z-index: 1;
+        &::before {
+          z-index: -1;
+          position: absolute;
+          bottom: 40px;
+          height: calc(100% + 120px);
+          border-radius: 20px;
+          background: linear-gradient(
+            90deg,
+            rgba(255, 186, 174, 0.19) 0.92%,
+            rgba(249, 249, 249, 0.25) 92.24%
+          );
+          content: "";
+          left: 0;
+          width: 100%;
+        }
+        h2 {
+          justify-content: center;
+        }
+        a {
+          justify-content: center;
+        }
+      }
+    }
+  }
+  .product {
+    &Filter {
+      display: none;
+    }
+    &__inner {
+      margin: 0 -6px;
+    }
+    &Item {
+      width: calc(50% - 12px);
+      margin: 6px;
+      border-radius: 10px;
+      &__image {
+        padding-bottom: 136%;
+      }
+    }
+  }
+  .info {
+    padding: 18px 0;
+    &Item {
+      padding: 13px 5px;
+      &:first-child {
+        border-radius: 12px 0 0 12px;
+      }
+      &:last-child {
+        border-radius: 0 12px 12px 0;
+      }
+      h2.sm {
+        font-size: 10px;
+        line-height: 15px;
+      }
+      h3 {
+        font-size: 9px;
+        line-height: 13px;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+@mixin user-xsm-sm {
+  .general {
+    padding: 0 0 20px 0;
+    &__inner {
+      &-image {
+        width: 196px;
+        height: 237px;
+      }
+      &-content {
+        &::before {
+          height: calc(100% + 80px);
+        }
       }
     }
   }
