--- a/public/css/components/3-pages/addProduct.scss
+++ b/public/css/components/3-pages/addProduct.scss
@@ -68,6 +68,23 @@
   border-radius: 20px;
   background: #fff1ef80;
   max-width: 480px;
+  position: relative;
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 16px;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    img {
+      @include fullImage;
+    }
+  }
   input {
     position: absolute;
     top: 0;
