--- a/public/css/components/3-pages/profile.scss
+++ b/public/css/components/3-pages/profile.scss
@@ -63,6 +63,7 @@
       border-radius: 15px;
       overflow: hidden;
       margin-bottom: 24px;
+
       img {
         position: absolute;
         top: 0;
@@ -83,6 +84,14 @@
         border-radius: 16px 0 0 0;
         overflow: hidden;
         background: $primary;
+        input {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+        }
         svg {
           width: 24px;
           height: 24px;
