--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1141,6 +1141,14 @@ p.sm {
   overflow: hidden;
   background: #ffbaae;
 }
+.profileSide__avatar-edit input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
 .profileSide__avatar-edit svg {
   width: 24px;
   height: 24px;
@@ -1225,6 +1233,32 @@ p.sm {
   border-radius: 20px;
   background: rgba(255, 241, 239, 0.5019607843);
   max-width: 480px;
+  position: relative;
+}
+.upload__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 16px;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+}
+.upload__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -o-object-fit: cover;
 }
 .upload input {
   position: absolute;
@@ -1403,6 +1437,8 @@ p.sm {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  min-height: 480px;
 }
 .general__inner-image {
   width: 435px;
@@ -1417,6 +1453,9 @@ p.sm {
       -ms-flex-pack: center;
           justify-content: center;
   margin-right: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .general__inner-image img {
   width: 100%;
@@ -1432,6 +1471,7 @@ p.sm {
   padding: 100px 80px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-left: auto;
   background: -webkit-gradient(linear, left top, right top, color-stop(0.92%, rgba(255, 186, 174, 0.19)), color-stop(92.24%, rgba(249, 249, 249, 0.25)));
   background: linear-gradient(90deg, rgba(255, 186, 174, 0.19) 0.92%, rgba(249, 249, 249, 0.25) 92.24%);
 }
@@ -1651,11 +1691,36 @@ p.sm {
   .postItem {
     width: calc(50% - 24px);
   }
-  .post__inner {
-    max-width: 940px;
+  .general__inner {
+    min-height: 340px;
   }
-  .postItem {
-    width: calc(50% - 24px);
+  .general__inner-text {
+    margin-bottom: 32px;
+  }
+  .general__inner-content {
+    padding: 30px;
+    width: calc(100% - 335px);
+  }
+  .general__inner-image {
+    width: 320px;
+  }
+  .info {
+    padding: 30px 0;
+  }
+  .infoItem {
+    padding: 20px 10px;
+  }
+  .infoItem h2.sm {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .infoItem h3 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .productItem {
+    width: calc(33.3% - 24px);
+    margin: 12px;
   }
   .addProduct__inner {
     margin: 0;
@@ -1727,6 +1792,12 @@ p.sm {
   }
   .profileMain {
     width: calc(100% - 260px);
+  }
+  .general__inner-image {
+    width: 240px;
+  }
+  .general__inner-content {
+    width: calc(100% - 255px);
   }
 }
 @media (max-width: 840px) {
@@ -1883,6 +1954,96 @@ p.sm {
     max-width: 200px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
+  }
+  .user {
+    border-radius: 42px 42px 0px 0px;
+    background: #fff;
+    padding: 60px 0 110px 0;
+  }
+  .general {
+    padding: 0;
+  }
+  .general__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .general__inner-image {
+    position: static;
+    width: 240px;
+    height: 300px;
+    border: 5px solid #fff;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 8px;
+    position: relative;
+    z-index: 1;
+  }
+  .general__inner-content {
+    width: 100%;
+    background: unset;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+  }
+  .general__inner-content::before {
+    z-index: -1;
+    position: absolute;
+    bottom: 40px;
+    height: calc(100% + 120px);
+    border-radius: 20px;
+    background: -webkit-gradient(linear, left top, right top, color-stop(0.92%, rgba(255, 186, 174, 0.19)), color-stop(92.24%, rgba(249, 249, 249, 0.25)));
+    background: linear-gradient(90deg, rgba(255, 186, 174, 0.19) 0.92%, rgba(249, 249, 249, 0.25) 92.24%);
+    content: "";
+    left: 0;
+    width: 100%;
+  }
+  .general__inner-content h2 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .general__inner-content a {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .productFilter {
+    display: none;
+  }
+  .product__inner {
+    margin: 0 -6px;
+  }
+  .productItem {
+    width: calc(50% - 12px);
+    margin: 6px;
+    border-radius: 10px;
+  }
+  .productItem__image {
+    padding-bottom: 136%;
+  }
+  .info {
+    padding: 18px 0;
+  }
+  .infoItem {
+    padding: 13px 5px;
+  }
+  .infoItem:first-child {
+    border-radius: 12px 0 0 12px;
+  }
+  .infoItem:last-child {
+    border-radius: 0 12px 12px 0;
+  }
+  .infoItem h2.sm {
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .infoItem h3 {
+    font-size: 9px;
+    line-height: 13px;
+    white-space: nowrap;
   }
   .main {
     padding-top: 0;
@@ -2111,5 +2272,15 @@ p.sm {
   .profileSide__avatar {
     width: 160px;
     height: 195px;
+  }
+  .general {
+    padding: 0 0 20px 0;
+  }
+  .general__inner-image {
+    width: 196px;
+    height: 237px;
+  }
+  .general__inner-content::before {
+    height: calc(100% + 80px);
   }
 }
