--- a/public/css/components/2-layout/header.scss
+++ b/public/css/components/2-layout/header.scss
@@ -83,8 +83,13 @@
     bottom: 0;
     width: 100%;
     padding: 0;
+    transform: translateY(130px);
     z-index: 20;
     filter: drop-shadow(0px 35px 80px rgba(128, 145, 171, 0.89));
+    @include transition;
+    &.active {
+      transform: translateY(0);
+    }
     &::before {
       width: 30%;
       background: $white;
