--- a/public/css/components/2-layout/components.scss
+++ b/public/css/components/2-layout/components.scss
@@ -311,3 +311,69 @@ p {
     }
   }
 }
+.customSelect {
+  position: relative;
+  margin-left: 12px;
+  z-index: 2;
+  &__selected {
+    width: 140px;
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 50px;
+    border: 1px solid #dfe6e9;
+    background: $white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    svg {
+      width: 14px;
+      height: 14px;
+      @include transition;
+    }
+    &.active {
+      svg {
+        transform: rotate(180deg);
+      }
+    }
+  }
+  &__options {
+    position: absolute;
+    top: 100%;
+    right: -5px;
+    min-width: 216px;
+    padding: 16px;
+    border-radius: 20px;
+    border: 1px solid #e7e7e7;
+    box-shadow: 50px 95px 135px rgba(122, 119, 137, 0.44);
+    background-color: $white;
+    box-sizing: border-box;
+    margin-top: 10px;
+  }
+  &__option {
+    background: transparent;
+    font-family: $mainFont;
+    font-size: 16px;
+    line-height: 120%;
+    color: $black;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    @include transition;
+    cursor: pointer;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    svg {
+      width: 18px;
+      height: 18px;
+      margin-right: 10px;
+    }
+    &:hover {
+      opacity: 1;
+      color: $primary;
+    }
+  }
+}
