--- a/public/css/main.css
+++ b/public/css/main.css
@@ -448,6 +448,89 @@ p.sm {
   color: #fff;
 }
 
+.customSelect {
+  position: relative;
+  margin-left: 12px;
+  z-index: 2;
+}
+.customSelect__selected {
+  width: 140px;
+  padding: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 50px;
+  border: 1px solid #dfe6e9;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  cursor: pointer;
+}
+.customSelect__selected svg {
+  width: 14px;
+  height: 14px;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+}
+.customSelect__selected.active svg {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.customSelect__options {
+  position: absolute;
+  top: 100%;
+  right: -5px;
+  min-width: 216px;
+  padding: 16px;
+  border-radius: 20px;
+  border: 1px solid #e7e7e7;
+  -webkit-box-shadow: 50px 95px 135px rgba(122, 119, 137, 0.44);
+          box-shadow: 50px 95px 135px rgba(122, 119, 137, 0.44);
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 10px;
+}
+.customSelect__option {
+  background: transparent;
+  font-family: "Lufga";
+  font-size: 16px;
+  line-height: 120%;
+  color: #000;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+  cursor: pointer;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+}
+.customSelect__option:last-child {
+  margin-bottom: 0;
+}
+.customSelect__option svg {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+}
+.customSelect__option:hover {
+  opacity: 1;
+  color: #ffbaae;
+}
+
 .header {
   position: absolute;
   top: 0;
