--- a/public/css/components/1-main/mixin.scss
+++ b/public/css/components/1-main/mixin.scss
@@ -80,6 +80,11 @@
   -ms-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
 }
+@mixin height {
+  @media (max-height: 680px) {
+    @content;
+  }
+}
 @mixin xsm-sm {
   @media (max-width: 540px) {
     @content;
