--- a/public/css/components/2-layout/components.scss
+++ b/public/css/components/2-layout/components.scss
@@ -287,6 +287,7 @@ p {
       display: flex !important;
       align-items: center;
       text-transform: capitalize;
+      background: transparent;
       &:hover {
         opacity: 0.8;
       }
