--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -213,16 +213,42 @@
   .post {
     padding: 0;
     .auto__container {
-      padding: 0;
+      padding: 0 !important;
     }
     &__row {
+      height: 100%;
       margin: 0;
     }
-    &Item {
-      width: 100%;
-      height: 100dvh;
+    &__inner {
       margin: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      overflow-y: auto;
+      overscroll-behavior-y: contain;
+      scroll-snap-type: y mandatory;
+      width: 100%;
+      -ms-overflow-style: none;
+      flex-direction: column;
+      scrollbar-width: none;
+      height: 100%;
+      padding: 0 !important;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    &Item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      scroll-snap-align: center;
+      position: relative;
+      height: 100%;
+      margin: 0 !important;
+      width: 100%;
       border-radius: 0;
+      box-sizing: border-box;
 
       &:hover {
         .postItem__image {
@@ -253,6 +279,8 @@
         justify-content: flex-end;
       }
       &__info {
+        padding-left: 20px;
+        padding-right: 20px;
       }
     }
   }
